stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0061]: this function takes 0 arguments but 1 argument was supplied
 --> tests/lib_tests.rs:7:20
  |
7 |     assert_eq!(10, hiker::answer("|12|34|"));
  |                    ^^^^^^^^^^^^^ --------- unexpected argument of type `&'static str`
  |
note: function defined here
 --> /sandbox/src/lib.rs:3:8
  |
3 | pub fn answer() -> i32 {
  |        ^^^^^^
help: remove the extra argument
  |
7 -     assert_eq!(10, hiker::answer("|12|34|"));
7 +     assert_eq!(10, hiker::answer());
  |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `hiker` (test "lib_tests") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
